# quikdb-protocol

./: Anchor.toml  Cargo.toml  README.md  package.json
docs/: architecture.md  community-nodes.md
platform/: README.md
platform/cli/server/: deployment_handler.go
platform/compute/: README.md  package.json
platform/compute/app/dashboard/: page.tsx
platform/compute/app/deployments/[id]/: page.tsx
platform/compute/components/: deploy-wizard.tsx  deployment-card.tsx  log-viewer.tsx
platform/compute/hooks/: use-deployment.ts  use-logs.ts
platform/compute/lib/: api.ts
platform/compute/types/: deployment.ts  subscription.ts
platform/edge-router/src/: index.ts
programs/node-registry/: Cargo.toml
programs/node-registry/src/: lib.rs
programs/quiks-rewards/: Cargo.toml
programs/quiks-rewards/src/: lib.rs
programs/referral/: Cargo.toml
programs/referral/src/: lib.rs
scripts/: create-quiks-token.sh  setup-devnet.sh
tests/: node-registry.ts  quiks-rewards.ts  referral.ts
