[package]
name = "node-registry"
version = "0.1.0"
description = "QuikDB community node registry — tracks nodes, heartbeats, and deployments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "node_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
