[package]
name = "referral"
version = "0.1.0"
description = "QuikDB on-chain referral tracking with tier-based reward multipliers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "referral"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
